--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material/card": "^14.0.0",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/joy": "^5.0.0-alpha.76",
-    "@mui/material": "^5.12.1",
-    "@mui/styles": "^5.12.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "formik": "^2.2.9",
+    "@mui/icons-material": "^5.14.12",
+    "@mui/joy": "^5.0.0-beta.9",
+    "@mui/material": "^5.14.12",
+    "@mui/styles": "^5.14.12",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.1.0"
+    "web-vitals": "^3.5.0",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
