--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material/card": "^14.0.0",
-    "@mui/icons-material": "^5.14.12",
-    "@mui/joy": "^5.0.0-beta.9",
-    "@mui/material": "^5.14.12",
-    "@mui/styles": "^5.14.12",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/joy": "^5.0.0-beta.15",
+    "@mui/material": "^5.14.18",
+    "@mui/styles": "^5.14.18",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "chart.js": "^4.4.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^3.5.0",
     "yup": "^1.3.2"
